# TrafficSim

./: .gitignore  CMakeLists.txt
src/: BusStop.cpp  BusStop.h  DesignByContract.h  GraphicsEngine.cpp  GraphicsEngine.h  Intersection.cpp  Intersection.h  Parser.cpp  Parser.h  Road.cpp  Road.h  Simulation.cpp  Simulation.h  TrafficLight.cpp  TrafficLight.h  Vehicle.cpp  Vehicle.h  VehicleGenerator.cpp  VehicleGenerator.h  main.cpp
tests/: README.md  demo_smart_test.cpp  helpers.h  tests.cpp
tests/Expected_Testfiles/: expected_01_basic_bad.txt  expected_02_roadlength_bad.txt  expected_03_tlight_bad.txt  expected_04_tlightcycle_bad.txt  expected_05_vehicle_bad.txt  expected_06_vehicletype_bad.txt  expected_07_vgenerator_bad.txt  expected_08_busstop_bad.txt  expected_09_busstopwait_bad.txt  expected_10_intersection_bad.txt  expected_test_negative_vehicle_position.txt  expected_test_require_violation.txt
tests/XML_Testfiles/: 02_roadlength_bad.xml  04_tlightcycle_bad.xml  05_vehicle_bad.xml  07_vgenerator_bad.xml  08_busstop_bad.xml  09_busstopwait_bad.xml  10_intersection_bad.xml  test_negative_vehicle_position.xml  test_require_violation.xml
tests/test_files/: 01_basic_bad.xml  01_basic_ok.xml  02_roadlength_bad.xml  02_roadlength_ok.xml  03_tlight_bad.xml  03_tlight_ok.xml  04_tlightcycle_bad.xml  04_tlightcycle_ok.xml  05_vehicle_bad.xml  05_vehicle_ok.xml  06_vehicletype_bad.xml  06_vehicletype_ok.xml  07_vgenerator_bad.xml  07_vgenerator_ok.xml  08_busstop_bad.xml  08_busstop_ok.xml  09_busstopwait_bad.xml  09_busstopwait_ok.xml  10_intersection_bad.xml  10_intersection_ok.xml  test_generator.xml  test_input.xml  test_intersection.xml  test_invalid_element.xml  test_traffic_light.xml  test_type.xml
